--- a/index.html
+++ b/index.html
@@ -135,16 +135,18 @@
     <h2>use earphone for better experience</h2>
     <button id="startBtn" onclick="startGame()">Start Game</button>
   </div>
-  
+
   <div class="container" id="mainContainer" style="display:none">
-    <h1>🎂 Don't be an idiot kunjee... be like unni and answer it😎 🎉</h1>
+    
     <div id="quiz">
+    <h1>🎂 Don't be an idiot kunjee... be like unni and answer it😎 🎉</h1>    
       <div class="question" id="question"></div>
       <div class="options" id="options"></div>
     </div>
     <div class="treasure" id="treasure">
+    <h1>🎂 Happy Birthday to  youuu kunjooochieeee <br> kunji poocha kutti <br> ichipodi mole <br>😘😘😘🎉</h1>      
       <h2>💖 You did it, sweetheart! Here's your surprise! 💖</h2>
-      <img src="https://media.giphy.com/media/xUPGcl3ijl0gXDjKTS/giphy.gif" alt="Treasure Image" />
+      <img src="/assets/Good.jpg" alt="Treasure Image" />
       <p>You're the greatest gift in my life 💕</p>
       <button id="playAgainBtn" onclick="resetGame()">Play Again</button>
     </div>
