assets correction in code

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="treasure" id="treasure">
     <h1>🎂 Happy Birthday to  youuu kunjooochieeee <br> kunji poocha kutti <br> ichipodi mole <br>😘😘😘🎉</h1>      
       <h2>💖 You did it, sweetheart! Here's your surprise! 💖</h2>
-      <img src="/assets/Good.jpg" alt="Treasure Image" />
+      <img src="assets/Good.jpg" alt="Treasure Image" />
       <p>You're the greatest gift in my life 💕</p>
       <button id="playAgainBtn" onclick="resetGame()">Play Again</button>
     </div>
