some minor changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Surprise Quiz</title>
+  <title>Birthday Surprise Quiz ...</title>
   
   <style>
     body {
@@ -141,13 +141,13 @@
   <div class="container" id="mainContainer" style="display:none">
     
     <div id="quiz">
-    <h1>🎂 Don't be an idiot kunjee... be like unni and answer it😎 🎉</h1>    
+    <h1>🎂 Don't be an idiot kunjeee... be like unni and answer it😎 🎉</h1>    
       <div class="question" id="question"></div>
       <div class="options" id="options"></div>
     </div>
     <div class="treasure" id="treasure">
     <h1>🎂 Happy Birthday to  youuu kunjooochieeee <br> kunji poocha kutti <br> ichipodi mole <br>😘😘😘🎉</h1>      
-      <h2>💖 You did it, sweetheart! Here's your surprise! 💖</h2>
+      <h2>💖 You did it, sweetheart! </h2>
       <img src="assets/Good.jpg" alt="Treasure Image" />
       <p>You're the greatest gift in my life 💕</p>
       <button id="playAgainBtn" onclick="resetGame()">Play Again</button>
