added more questions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Surprise Quiz ...</title>
+  <title>Birthday Surprise Quiz !</title>
   
   <style>
     body {
@@ -165,6 +165,17 @@
         question: "What's my favorite nickname for you?",
         options: ["Kunjoochi", "Kunjoochi poocha", "kunjooochi","kunji" ],
         answer: "kunjooochi"
+      },
+
+      {
+        question: "What’s my favorite way to relax with you?",
+        options: ["Netflix and chill", "Long walks", "Cuddling", "Talking endlessly"],
+        answer: "Long walks"      
+      },
+      {
+        question: "why do you like your boy friend so much?",
+        options: ["he is the best", "he is very caring ", "he made you your best version", "he is cute"],
+        answer:"he is cute"
       },
       {
         question: "What food do we both love the most?",
