--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <audio id="bgMusic" src="assets/bensound-smile.mp3" loop></audio>
   <audio id="wrongSound" src="assets/fart-91011.mp3"></audio>
   <audio id="applauseSound" src="assets/applause-8.mp3"></audio>
-  <audio id="applauseSound2" src="assets/hosiana.ogg"></audio>
+  <audio id="applauseSound2" src="assets/hosiana.ogg"  loop></audio>
   <audio id="rightSound" src="assets/yaaa.ogg"></audio>
   
 
